<resources>
    <string name="app_name">To Do List</string>
    <string name="listTitleHint">Enter a title for the task.</string>
    <string name="listDetailsHint">Enter a task details.</string>
    <string name="listTitleLabel">Title of the Task</string>
    <string name="listDetailsLabel">Details of the Task </string>
    <string name="listCompleteLabel">Complete</string>
    <string name="add_task">Add Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="adding_task">The Task Add/edit ٍSuccessfully</string>
    <string name="deleting_task">The Task Deleted ٍSuccessfully</string>
    <string name="sort">Sort Tasks</string>
</resources>